refactor: clean up test code